# palautusrepositorio

./: .gitignore  README.md  retro.md
koodi/viikko1/nhl-statistics-1/src/: index.py  statistics.py
koodi/viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  ostoskori.py  pankki.py  varasto.py
viikko4/maksukortti-mock/: .coverage  pyproject.toml
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py  maksukortti_test.py
viikko4/tdd-ostoskori/src/: index.py  ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko7/: referaatti.md
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  tekoaly_parannettu.py
