[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["Laiho <emillaiho@hotmail.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
